--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,14 @@
             <button id="back">Back</button>
             <button id="reset">Reset</button>
         </div>
+        <div class="algo-controls">
+            <div class="sorting">
+                <input type="number" id="bar-count" placeholder="Number of Bars"/>
+                <button id="generate">Generate</button>
+                <button id="bubble-sort">Bubble</button>
+                <button id="quick-sort">Quick</button>
+            </div>
+        </div>
         <div class="algo-list">
             <button id="sorting">Sorting</button>
             <button id="graph">Graph</button>
@@ -31,13 +39,6 @@
     <div class="content">
         <div id="canvas">
             <div class="array">
-                <div class="bar"></div>
-                <div class="bar"></div>
-                <div class="bar"></div>
-                <div class="bar"></div>
-                <div class="bar"></div>
-                <div class="bar"></div>
-                <div class="bar"></div>
             </div>
         </div>
     </div>
