Algo section control control

--- a/public/index.html
+++ b/public/index.html
@@ -23,11 +23,19 @@
             <button id="reset">Reset</button>
         </div>
         <div class="algo-controls">
-            <div class="sorting">
+
+            <div class="sorting-controls">
                 <input type="number" id="bar-count" placeholder="Number of Bars"/>
-                <button id="generate">Generate</button>
+                <button id="generate-bars">Generate</button>
                 <button id="bubble-sort">Bubble</button>
                 <button id="quick-sort">Quick</button>
+            </div>
+            <div class="graph-controls">
+                <input type="number" id="graph-row">x
+                <input type="number" id="graph-column">
+                <button id="generate-graph">Generate</button>
+                <button id="bfs">BFS</button>
+                <button id="dfs">DFS</button>
             </div>
         </div>
         <div class="algo-list">
