--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
                 <button id="quick-sort">Quick</button>
             </div>
             <div class="graph-controls">
-                <input type="number" id="graph-row">x
+                <input type="number" id="graph-row">
                 <input type="number" id="graph-column">
                 <button id="generate-graph">Generate</button>
                 <button id="bfs">BFS</button>
