Fixed Selection sort

--- a/public/index.html
+++ b/public/index.html
@@ -35,6 +35,7 @@
                 <button id="insertion-sort">Insertion</button>
                 <button id="stalin-sort">Stalin</button>
                 <button id="oddeven-sort">Odd Even</button>
+                <button id="selection-sort">Selection</button>
             </div>
             <div class="graph-controls">
                 <input type="number" id="graph-row">
