--- a/public/index.html
+++ b/public/index.html
@@ -10,10 +10,27 @@
     <link rel="stylesheet" type="text/css" href="/style/app.css"/>
     <link rel="stylesheet" type="text/css" href="/style/sorting.css"/>
     <link rel="stylesheet" type="text/css" href="/style/graph.css"/>
+    <link rel="stylesheet" type="text/css" href="/style/notification.css"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"/>
+
     <title>Snowpack App</title>
 </head>
 <body>
 <div id="app">
+    <div class="toast active">
+        <div class="toast-content">
+            <i class="i fas fa solid fa-check check"></i>
+            <div class="message">
+                <span class="text text-1">Success</span>
+                <span class="text text-2">Your changes have been saved</span>
+            </div>
+
+        </div>
+        <i class="fa-solid fa-xmark close">
+
+        </i>
+        <div class="progress active"></div>
+    </div>
     <script type="module" src="/dist/index.js"></script>
     <div class="header">
         <div class="controls">
