--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8"/>
-    <link rel="icon" href="/favicon.ico"/>
+    <link rel="icon" href="/algo.ico"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <meta name="description" content="Web site created using create-snowpack-app"/>
     <link rel="stylesheet" type="text/css" href="/style/header.css"/>
@@ -13,7 +13,7 @@
     <link rel="stylesheet" type="text/css" href="/style/notification.css"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"/>
 
-    <title>Snowpack App</title>
+    <title>Algo Visualizer</title>
 </head>
 <body>
 <div id="app">
